# LF_PL

./: .gitignore  ActiveObject.cpp  ActiveObject.hpp  Algo.cpp  Algo.hpp  CMakeLists.txt  ClientHandler.cpp  ClientHandler.hpp  Graph.cpp  Graph.hpp  LeaderFollower.cpp  LeaderFollower.hpp  Pipeline.cpp  Pipeline.hpp  Proactor.cpp  Proactor.hpp  README.md  Reactor.cpp  Reactor.hpp  Server.cpp  Singletone.hpp
